<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity"
    android:background="@color/calc_layout_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/calc_title"
        android:textColor="@color/calc_text"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/calc_tv_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:textColor="@color/calc_expression_text"
        android:textSize="18sp"
        tools:text="174 - 55 ="/>

    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/calc_text"
        android:textSize="52sp"
        android:textStyle="bold"
        tools:text="119"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:padding="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_percent"
                android:text="@string/calc_btn_percent"
                style="@style/calc_btn_func"/>
            <Button
                android:id="@+id/calc_btn_ce"
                android:text="@string/calc_btn_ce"
                style="@style/calc_btn_func"/>
            <Button
                android:id="@+id/calc_btn_c"
                android:text="@string/calc_btn_c"
                style="@style/calc_btn_func"/>
            <Button
                android:id="@+id/calc_btn_backspace"
                android:text="@string/calc_btn_backspace"
                style="@style/calc_btn_func"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_inverse"
                android:text="@string/calc_btn_inverse"
                style="@style/calc_btn_func"/>
            <Button
                android:id="@+id/calc_btn_square"
                android:text="@string/calc_btn_square"
                style="@style/calc_btn_func"/>
            <Button
                android:id="@+id/calc_btn_sqrt"
                android:text="@string/calc_btn_sqrt"
                style="@style/calc_btn_func"/>
            <Button
                android:id="@+id/calc_btn_divide"
                android:text="@string/calc_btn_divide"
                style="@style/calc_btn_func"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_7"
                android:text="@string/calc_btn_7"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_8"
                android:text="@string/calc_btn_8"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_9"
                android:text="@string/calc_btn_9"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_multiplication"
                android:text="@string/calc_btn_multiplication"
                style="@style/calc_btn_func"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_4"
                android:text="@string/calc_btn_4"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_5"
                android:text="@string/calc_btn_5"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_6"
                android:text="@string/calc_btn_6"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_minus"
                android:text="@string/calc_btn_minus"
                style="@style/calc_btn_func"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_1"
                android:text="@string/calc_btn_1"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_2"
                android:text="@string/calc_btn_2"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_3"
                android:text="@string/calc_btn_3"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_plus"
                android:text="@string/calc_btn_plus"
                style="@style/calc_btn_func"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_plus_minus"
                android:text="@string/calc_btn_plus_minus"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_0"
                android:text="@string/calc_btn_0"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_comma"
                android:text="@string/calc_btn_comma"
                style="@style/calc_btn_digit"/>
            <Button
                android:id="@+id/calc_btn_equal"
                android:text="@string/calc_btn_equal"
                style="@style/calc_btn_equal"/>
        </TableRow>

    </TableLayout>

</LinearLayout>