<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- tools: - для дизайну, не переноситься у код -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262">

        <TextView
            android:id="@+id/main_tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:text="@string/main_tv_hello_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_button_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:textSize="16sp"
            android:text="@string/main_button_calc" />

        <Button
            android:id="@+id/main_button_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:textSize="16sp"
            android:text="@string/main_button_game" />

        <Button
            android:id="@+id/main_button_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:textSize="16sp"
            android:text="@string/main_button_chat" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>