<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_layout"
    android:orientation="vertical"
    tools:context=".GameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:background="@color/game_title_background"
            android:textColor="@color/game_title_foreground"
            android:text="@string/game_tv_title"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/game_tv_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    tools:text="SCORE\n532"
                    android:gravity="center"
                    android:textColor="@color/game_score_foreground"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="7dp"
                    android:background="@color/game_score_background"/>
                <TextView
                    android:id="@+id/game_tv_best"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    tools:text="BEST\n2048"
                    android:gravity="center"
                    android:textColor="@color/game_score_foreground"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="7dp"
                    android:background="@color/game_score_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/game_btn_new"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/game_btn_new"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    android:background="@drawable/game_btn"/>
                <Button
                    android:id="@+id/game_btn_undo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/game_btn_undo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    android:background="@drawable/game_btn"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/game_tv_hint"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TableLayout
        android:id="@+id/game_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="6dp"
        android:background="@color/game_field_background">
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/game_cell_00"
                style="@style/game_cell_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_cell_01"
                style="@style/game_cell_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_cell_02"
                style="@style/game_cell_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_cell_03"
                style="@style/game_cell_8"
                tools:text="8"/>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/game_cell_10"
                style="@style/game_cell_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_cell_11"
                style="@style/game_cell_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_cell_12"
                style="@style/game_cell_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_cell_13"
                style="@style/game_cell_8"
                tools:text="8"/>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/game_cell_20"
                style="@style/game_cell_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_cell_21"
                style="@style/game_cell_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_cell_22"
                style="@style/game_cell_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_cell_23"
                style="@style/game_cell_8"
                tools:text="8"/>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/game_cell_30"
                style="@style/game_cell_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_cell_31"
                style="@style/game_cell_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_cell_32"
                style="@style/game_cell_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_cell_33"
                style="@style/game_cell_8"
                tools:text="8"/>
        </TableRow>
    </TableLayout>

</LinearLayout>